force-app/main/default/objects/BSC_Question__c/fields/Is_Last_Question__c.field-meta.xml
<CustomField>
    <fullName>Is_Last_Question__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check whether this is the last question of the form. Whenever the form finds the last question it will show the operation button.</description>
    <label>Is Last Question</label>
    <type>Checkbox</type>
</CustomField>