force-app/main/default/objects/BSC_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Calculated</fullName>
                <isActive>false</isActive>
                <label>Calculated</label>
            </value>
            <value>
                <fullName>Yes/No</fullName>
                <isActive>false</isActive>
                <label>Yes/No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>