force-app/main/default/objects/BSC_Question__c/fields/Risk_Assessment_Section__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Section__c</fullName>
    <label>Risk Assessment Section</label>
    <referenceTo>BSC_Risk_Assessment_Section__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>