force-app/main/default/objects/BSC_Question__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Used only if question type is List. The weight will be multiplied with the option score to define the final score for an answer.</description>
    <label>Weight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>